# village

./: Board.cpp  CMakeLists.txt  ElixirCollector.cpp  README.md  build.md  game
docs/: project_structure.md
include/: Archer.h  Barbarian.h  Board.h  Bomberman.h  Enemy.h  Entity.h  Player.h  Position.h  Raider.h  Troop.h
src/: Archer.cpp  Barbarian.cpp  Board.cpp  Bomberman.cpp  Building.cpp  ElixirCollector.cpp  Enemy.cpp  GoldMine.cpp  Player.cpp  Raider.cpp  Troop.cpp  main.cpp
